--- a/src/Kentico.Xperience.Lucene/Kentico.Xperience.Lucene.csproj
+++ b/src/Kentico.Xperience.Lucene/Kentico.Xperience.Lucene.csproj
@@ -32,7 +32,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Include="..\img\icon.png" Pack="true" PackagePath="" />
+		<None Include="..\..\img\icon.png" Pack="true" PackagePath="" />
 	</ItemGroup>
 
 	<ItemGroup>
