--- a/src/Kentico.Xperience.Lucene.Examples/Kentico.Xperience.Lucene.Examples.csproj
+++ b/src/Kentico.Xperience.Lucene.Examples/Kentico.Xperience.Lucene.Examples.csproj
@@ -7,11 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <PackageReference Include="Kentico.Xperience.Admin" Version="26.2.0" />
+    <PackageReference Include="Kentico.Xperience.WebApp" Version="26.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\Kentico.Xperience.Lucene\Kentico.Xperience.Lucene.csproj" />
+    <ProjectReference Include="..\Kentico.Xperience.Lucene\Kentico.Xperience.Lucene.csproj" />
   </ItemGroup>
 
 </Project>
