--- a/src/Kentico.Xperience.Lucene/Kentico.Xperience.Lucene.csproj
+++ b/src/Kentico.Xperience.Lucene/Kentico.Xperience.Lucene.csproj
@@ -15,7 +15,7 @@
 		<Version>0.0.1</Version>
 		<Authors>Kentico Software</Authors>
 		<Company>Kentico Software</Company>
-		<PackageIcon>icon.png</PackageIcon>
+		<PackageIcon>logo.png</PackageIcon>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageTags>kentico xperience mvc core lucene search</PackageTags>
 		<Description>Enables the creation of Lucene search indexes and the indexing of Xperience content tree pages using a code-first approach.</Description>
@@ -32,7 +32,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Include="..\..\img\icon.png" Pack="true" PackagePath="" />
+		<None Include="..\..\images\logo.png" Pack="true" PackagePath="" />
 	</ItemGroup>
 
 	<ItemGroup>
